Added user creation feature

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -68,7 +68,7 @@
     </li>
 {% else %}
     <li class="nav-item">
-        <a class="nav-link text-success fw-semibold" href="/admin/login/">
+        <a class="nav-link text-success fw-semibold" href="{% url 'login' %}">
             Login
         </a>
     </li>
